# graphql-rust-demo

./: .dockerignore  .env  .gitignore  Cargo.toml  LICENSE  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  readme.adoc
.github/: deploy.sh
.github/workflows/: build-push-image.yml  workflow.yml
apollo-router/: .env  Cargo.toml  Dockerfile  router.yaml  supergraph.graphql  supergraph.yaml
apollo-router/src/: jwt_validation.rs
apollo-server/: .dockerignore  Dockerfile  gateway.js  package.json  readme.adoc  wait-for-it.sh
auth-service/: .env  Cargo.toml  Dockerfile  diesel.toml
auth-service/migrations/2020-06-01-105446_create_users/: up.sql
auth-service/migrations/2020-06-16-121244_insert_data/: down.sql  up.sql
auth-service/src/: graphql.rs  lib.rs  main.rs  utils.rs
auth-service/src/persistence/: connection.rs  mod.rs  model.rs  repository.rs  schema.rs
auth-service/tests/: mutation_tests.rs
auth-service/tests/common/: mod.rs
common-utils/: Cargo.toml
common-utils/src/: lib.rs
gateway/: .env  Cargo.toml  Dockerfile  supergraph.graphql  supergraph.yaml
gateway/src/: jwt_validation.rs  main.rs
planets-service/: .env  Cargo.toml  Dockerfile
planets-service/migrations/2020-05-20-103451_create_planets/: down.sql  up.sql
planets-service/migrations/2020-05-22-143746_insert_data/: down.sql  up.sql
planets-service/src/: db.rs  db_connection.rs  graphql.rs  kafka.rs  lib.rs  main.rs  model.rs  numbers.rs  repository.rs  schema.rs
planets-service/src/persistence/: connection.rs  model.rs  repository.rs  schema.rs
planets-service/tests/: mutation_tests.rs  query_tests.rs
planets-service/tests/common/: mod.rs
satellites-service/: .env  Cargo.toml  Dockerfile
satellites-service/migrations/2020-05-27-092837_create_satellites/: down.sql  up.sql
satellites-service/migrations/2020-05-27-092852_insert_data/: down.sql  up.sql
satellites-service/src/: graphql.rs  lib.rs  main.rs  model.rs  utils.rs
satellites-service/src/persistence/: mod.rs  model.rs  repository.rs  schema.rs
satellites-service/tests/: query_tests.rs
satellites-service/tests/common/: mod.rs
