[package]
name = "apollo-router"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
apollo-router = "1.7.0"
anyhow = "1.0.68"
async-trait = "0.1.60"
futures = "0.3.25"
schemars = "0.8.11"
jsonwebtoken = "8.2.0"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
http = "0.2.8"
dotenv = "0.15.0"
