[package]
name = "apollo-router"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
apollo-router = "1.13.0"
anyhow = "1.0.70"
async-trait = "0.1.68"
futures = "0.3.27"
schemars = "0.8.12"
jsonwebtoken = "8.3.0"
serde = "1.0.158"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
http = "0.2.9"
dotenv = "0.15.0"
