[package]
name = "auth-service"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
async-graphql = "6.0.0"
async-graphql-actix-web = "6.0.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0.178", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
argon2 = "0.5.1"
chrono = "0.4.26"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.1"

[dev-dependencies]
serde_json = "1.0.104"
jsonpath_lib = "0.3.0"
base64 = "0.21.2"
testcontainers = "0.14.0"
