[package]
name = "auth-service"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
async-graphql = "6.0.7"
async-graphql-actix-web = "6.0.7"
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0.188", features = ["derive"] }
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
argon2 = "0.5.2"
chrono = "0.4.31"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"

[dev-dependencies]
serde_json = "1.0.107"
jsonpath_lib = "0.3.0"
base64 = "0.21.4"
testcontainers = "0.14.0"
