[package]
name = "auth-service"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
async-graphql = "7.0.5"
async-graphql-actix-web = "7.0.5"
actix-web = "4.5.1"
actix-rt = "2.9.0"
serde = { version = "1.0.202", features = ["derive"] }
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
chrono = "0.4.38"
lazy_static = "1.4.0"
strum = "0.26.2"
strum_macros = "0.26.2"

[dev-dependencies]
serde_json = "1.0.117"
jsonpath_lib = "0.3.0"
base64 = "0.22.1"
testcontainers = "0.16.7"
