[package]
name = "common-utils"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0.123", features = ["derive"] }
jsonwebtoken = "7.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
strum = "0.20.0"
strum_macros = "0.20.1"
