[package]
name = "gateway"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
apollo-router = "1.26.0"
anyhow = "1.0.72"
async-trait = "0.1.72"
futures = "0.3.28"
schemars = "0.8.12"
jsonwebtoken = "8.3.0"
serde = "1.0.178"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
http = "0.2.9"
dotenv = "0.15.0"
