[package]
name = "planets-service"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
async-graphql = { version = "5.0.9", features = ["dataloader"] }
async-graphql-actix-web = "5.0.9"
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-web-actors = "4.2.0"
futures = "0.3.28"
async-trait = "0.1.68"
bigdecimal = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
strum = "0.24.1"
strum_macros = "0.24.3"
rdkafka = { version = "0.31.0", features = ["cmake-build"] }
async-stream = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.14.0"
