[package]
name = "planets-service"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
common-utils = { path = "../common-utils" }
async-graphql = { version = "7.0.5", features = ["dataloader"] }
async-graphql-actix-web = "7.0.5"
actix-web = "4.5.1"
actix-rt = "2.9.0"
actix-web-actors = "4.3.0"
futures = "0.3.30"
bigdecimal = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
strum = "0.26.2"
strum_macros = "0.26.2"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
async-stream = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.16.7"
