[package]
name = "satellites-service"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
async-graphql = { version = "6.0.7", features = ["chrono"] }
async-graphql-actix-web = "6.0.7"
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0.188", features = ["derive"] }
diesel = { version = "2.1.1", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
strum = "0.25.0"
strum_macros = "0.25.2"

[dev-dependencies]
serde_json = "1.0.107"
jsonpath_lib = "0.3.0"
testcontainers = "0.14.0"
