[package]
name = "satellites-service"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.5", features = ["chrono"] }
async-graphql-actix-web = "7.0.5"
actix-web = "4.5.1"
actix-rt = "2.9.0"
serde = { version = "1.0.202", features = ["derive"] }
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
strum = "0.26.2"
strum_macros = "0.26.2"

[dev-dependencies]
serde_json = "1.0.117"
jsonpath_lib = "0.3.0"
testcontainers = "0.16.7"
